<resources>
    <string name="app_name">Food Spot</string>
    <string name="profile_data">Register Preference</string>
    <string name="conform_password">Conform Password</string>
    <string name="register">Register</string>
    <string name="new_password">New Password</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email_address">Email Address</string>
    <string name="full_name">Full Name</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="home">Home</string>
    <string name="my_profile">My Profile</string>
    <string name="favourite_restaurants">Favourite Restaurants</string>
    <string name="faqs">FAQs</string>
    <string name="log_out">Log out</string>
    <string name="order_history">Order History</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="q1">Q1. Can I place order on call?</string>
    <string name="a1">A1. Sorry, we don’t accept orders on call. However you can call us on +91-8327087545 for any help related to placing order.</string>
    <string name="q2">Q2. How do I know my order is confirmed?</string>
    <string name="a2">A2. We will send you a order confirmation email once we receive your order.</string>
    <string name="q3">Q3. How do I cancel my order?</string>
    <string name="a3">A3. Please refer to our return and cancellation policy.</string>
    <string name="q4">Q4. How will be my orders delivered?</string>
    <string name="a4">A1. Orders are delivered directly by the FoodSpot Packaging Assist suppliers. Different items in an order could be fulfilled by different suppliers. We will share the contact details and amount payable for all deliveries via email and SMS.</string>
    <string name="q5">Q5. Is delivery free?</string>
    <string name="a5">A5. Yes. There are no delivery or handling charges.</string>
    <string name="q6">Q6. Why is my location is not serviceable?</string>
    <string name="a6">A6. We are currently live only in a few cities. We will be expanding soon.</string>
    <string name="q7">Q7. When I have to pay?</string>
    <string name="a7">A7. You will have to pay at the time of delivery as per the payment details we send to you via email.</string>
    <string name="q8">Q8. Can I buy the goods on credit?</string>
    <string name="a8">A8. Sorry, we don’t allow a credit on goods currently.</string>
    <string name="q9">Q9. Will I get an invoice?</string>
    <string name="a9">A9. Yes. You will get your invoice from our supplier at the time of delivery.</string>
    <string name="q10">Q10. How have you selected these products?</string>
    <string name="a10">A10. We have show products which have passed our quality tests and are best suited for delivery. We will keep updating our catalog with better products. Stay tuned!</string>
    <string name="choose_from_menu_listed_below">Choose from menu listed below:</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="action_sort">action sort</string>
    <string name="remove">Remove</string>
    <string name="add">Add</string>
    <string name="place_order">Place Order</string>
    <string name="order_placed">Order Placed</string>
    <string name="ok">Ok</string>
    <string name="order_placed_note">Your Order Placed successfully</string>
    <string name="btn_txt_ok">Ok</string>
    <string name="enter_the_received_otp_below">Enter the received otp below</string>
    2
</resources>