<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<group android:checkableBehavior="single">
    <item android:id="@+id/home"
        android:title="@string/home"
        android:icon="@drawable/ic_address"/>
    <item
        android:id="@+id/profile"
        android:title="@string/my_profile"
        android:icon="@drawable/ic_profile"/>
    <item
        android:id="@+id/favourite"
        android:title="@string/favourite_restaurants"
        android:icon="@drawable/ic_favourite"/>
    <item
        android:id="@+id/orderHistory"
        android:title="@string/order_history"
        android:icon="@drawable/ic_odrder"/>
    <item
        android:id="@+id/faq"
        android:title="@string/faqs"
        android:icon="@drawable/ic_faq"/>
    <item
        android:id="@+id/logOut"
        android:title="@string/log_out"
        android:icon="@drawable/ic_log_out"/>
</group>
</menu>