<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/faqLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.FAQFragment"
    android:background="@drawable/page_color">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q1"
                android:textColor="@color/Yellow"
                android:textSize="18sp"
                android:layout_marginTop="5dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/a1"
                android:textSize="15sp"
                android:textColor="@color/white"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#f5f5f5"
                android:layout_margin="4dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q2"
                android:textColor="@color/Yellow"
                android:textSize="18sp"
                android:layout_marginTop="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/a2"
                android:textSize="15sp"
                android:textColor="@color/white"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#f5f5f5"
                android:layout_margin="4dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q3"
                android:textColor="@color/Yellow"
                android:textSize="18sp"
                android:layout_marginTop="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/a3"
                android:textSize="15sp"
                android:textColor="@color/white"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#f5f5f5"
                android:layout_margin="4dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q4"
                android:textColor="@color/Yellow"
                android:textSize="18sp"
                android:layout_marginTop="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/a4"
                android:textSize="15sp"
                android:textColor="@color/white"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#f5f5f5"
                android:layout_margin="4dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q5"
                android:textColor="@color/Yellow"
                android:textSize="18sp"
                android:layout_marginTop="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/a5"
                android:textSize="15sp"
                android:textColor="@color/white"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#f5f5f5"
                android:layout_margin="4dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q6"
                android:textColor="@color/Yellow"
                android:textSize="18sp"
                android:layout_marginTop="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/a6"
                android:textSize="15sp"
                android:textColor="@color/white"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#f5f5f5"
                android:layout_margin="4dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q7"
                android:textColor="@color/Yellow"
                android:textSize="18sp"
                android:layout_marginTop="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/a7"
                android:textSize="15sp"
                android:textColor="@color/white"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#f5f5f5"
                android:layout_margin="4dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q8"
                android:textColor="@color/Yellow"
                android:textSize="18sp"
                android:layout_marginTop="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/a8"
                android:textSize="15sp"
                android:textColor="@color/white"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#f5f5f5"
                android:layout_margin="4dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q9"
                android:textColor="@color/Yellow"
                android:textSize="18sp"
                android:layout_marginTop="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/a9"
                android:textSize="15sp"
                android:textColor="@color/white"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#f5f5f5"
                android:layout_margin="4dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q10"
                android:textColor="@color/Yellow"
                android:textSize="18sp"
                android:layout_marginTop="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/a10"
                android:textSize="15sp"
                android:textColor="@color/white"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>