<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RegistrationPage"
    android:background="@drawable/page_color">
    <ImageView
        android:id="@+id/imgBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back_button"
        android:drawablePadding="10dp"
        android:layout_margin="10dp" />
    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:hint="@string/full_name"
        android:drawableStart="@drawable/ic_profile"
        android:drawablePadding="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        android:padding="10dp"
        android:inputType="text"
        android:layout_below="@+id/imgBack"/>
    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etName"
        android:background="@color/white"
        android:hint="@string/email_address"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        android:padding="10dp"
        android:inputType="text"/>
    <EditText
        android:id="@+id/etMobileNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etEmail"
        android:background="@color/white"
        android:hint="@string/mobile_number"
        android:drawableStart="@drawable/ic_mobile_number"
        android:drawablePadding="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        android:padding="10dp"
        android:inputType="number"
        android:maxLength="10"/>
    <EditText
        android:id="@+id/etDeliveryAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etMobileNum"
        android:background="@color/white"
        android:hint="@string/delivery_address"
        android:drawableStart="@drawable/ic_address"
        android:drawablePadding="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        android:padding="10dp"
        android:inputType="text"/>
    <EditText
        android:id="@+id/etNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etDeliveryAdd"
        android:background="@color/white"
        android:hint="@string/new_password"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        android:padding="10dp"
        android:inputType="textPassword"/>
    <EditText
        android:id="@+id/etConPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etNewPassword"
        android:background="@color/white"
        android:hint="@string/conform_password"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        android:padding="10dp"
        android:inputType="textPassword"/>
    <Button
        android:id="@+id/butRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etConPassword"
        android:text="@string/register"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/Yellow"
        android:background="@color/colorPrimary"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"/>
</RelativeLayout>